docs: Discordの関連スレッドのリンクを追加

--- a/docs/adr/20250325_DBで使用する主キーの型について.md
+++ b/docs/adr/20250325_DBで使用する主キーの型について.md
@@ -16,6 +16,7 @@ UUID v4を採用しようとしていた。
 ## References
 
 - https://zenn.dev/calloc134/articles/4f96b0fe093489
+- [Discordの関連スレッド](https://discord.com/channels/1126373101832257628/1354010703689809962)
 
 # Decision
 
