docs: テストコードの方針にPrismaのガイドに従ったMockの使用を明記

--- a/docs/adr/20250511_テストコードの方針.md
+++ b/docs/adr/20250511_テストコードの方針.md
@@ -16,6 +16,8 @@ Relevant PR:
 
 バックエンドの単体テストで、トランザクションやデータの重複が発生し、テストの安定性が低下した。
 その原因はDBにあり、Prismaの運用方針に問題があった。
+viteでモック生成などリポジトリをモックできれば良かったが
+使えるライブラリがほとんどなかった。
 
 ## References
 
@@ -26,7 +28,7 @@ https://www.prisma.io/blog/testing-series-1-8eRB5p0Y8o
 
 # Decision
 
-- サービス層の単体テストはMockを使う
+- サービス層の単体テストはPrismaのガイドに従ってMockを使う
 - API（プレゼン層）の単体テストはDBを使う
 
 ## Reason
