chore: adrの内容を整理

--- a/docs/adr/20260114_記事一覧hookの再フェッチ機構の実装方法.md
+++ b/docs/adr/20260114_記事一覧hookの再フェッチ機構の実装方法.md
@@ -27,7 +27,7 @@ https://github.com/Geek-Teck-Mentors/trend_diary/pull/428
 
 ## Reason
 
-- `useSWR`のkeyにクエリパラメータを含めることで、クエリパラメータが変更された際に自動的に再フェッチが行われるため、実装がシンプルになるため
+- `useSWR`のkeyにクエリパラメータを含めることで、クエリパラメータが変更された際に自動的に再フェッチが行われるため、実装がシンプルになる
   - ただし、監視対象のクエリパラメータが多くなるとkeyの内容が複雑になるため、管理が難しくなる可能性があるリスクは残る
 - クエリパラメータ更新の際に`mutate`関数を実行して手動で再フェッチを行う方法も試したが、送られるリクエストのクエリパラメータが更新されず、意図した動作にならなかったため断念
   - `mutate`関数を実行したタイミングで`useSWR`のkeyが更新されないため、古いkeyで再フェッチが行われてしまう
@@ -38,3 +38,5 @@ https://github.com/Geek-Teck-Mentors/trend_diary/pull/428
 # Consequences
 
 この実装により、クエリパラメータの変更に伴う再フェッチが自動的に行われるようになったが、keyの内容が複雑になるためクエリパラメータの管理がやや難しくなる可能性がある。
+
+今後クエリパラメータが増加した場合は、keyで参照しているqueryパラメータをまとめた変数に追加していく必要がある。
